kubernetes/user_management/user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
  labels:
    app: user
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-container
  template:
    metadata:
      labels:
        app: user-container
    spec:
      containers:
        - image: localhost:5000/user
          imagePullPolicy: Never
          name: user
          ports:
            - containerPort: 8002
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-database-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-database-container
  template:
    metadata:
      labels:
        app: user-database-container
        tier: backend
    spec:
      containers:
        - name: user-database-container
          image: postgres:14.3
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: user-database-volume-mount
              mountPath: /var/lib/postgresql/data

      volumes:
        - name: user-database-volume-mount
          persistentVolumeClaim:
            claimName: user-pvc
