kubernetes/user_management/user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  labels:
    app: user
spec:
  type: NodePort
  selector:
    app: user
  ports:
    - port: 8002
      targetPort: 8002
---
kind: Service
apiVersion: v1
metadata:
  name: user-database-service
spec:
  selector:
    app: user-database-container
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
