kubernetes/user_management/user-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: user-ingress
spec:
  rules:
  - host: user.local
    http:
      paths:
      - backend:
          serviceName: user-service
          servicePort: 8002
